# AI_Gobang

./: CMakeLists.txt  Calculation.cpp  README.md  graphicInterface.cpp  head.h  main.cpp
